generated/manifests/prod-axon/shoko/Deployment-shoko.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: shoko
    app.kubernetes.io/name: shoko
  name: shoko
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: shoko
      app.kubernetes.io/name: shoko
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 5e09d21c7fba56e932ed2ae2c870f6e263e6c628210f30c55c3d8ce21ec811b3
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: shoko
        app.kubernetes.io/name: shoko
        den.observability/file-tailed: "true"
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - run
            - /etc/alloy/config.alloy
            - --storage.path=/home/shoko/.shoko/.alloy
            - --server.http.listen-addr=127.0.0.1:12345
          image: docker.io/grafana/alloy@sha256:b8ec653c44235fbe910879145dac3597d66b0aaecf60bcbbe82580767771a839
          name: logtail
          securityContext:
            runAsGroup: 65536
            runAsUser: 1027
          volumeMounts:
            - mountPath: /home/shoko/.shoko
              name: config
            - mountPath: /data
              name: data
            - mountPath: /etc/alloy/config.alloy
              name: logtail
              readOnly: true
              subPath: config.alloy
        - env:
            - name: PGID
              value: "65536"
            - name: PUID
              value: "1027"
            - name: TZ
              value: America/Los_Angeles
          image: shokoanime/server@sha256:b841f8249c9edfba102e4072e2b2a3eae4179e5dd553f29e11b9898a44f1e836
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v3/Init/Status
              port: 8111
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: main
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v3/Init/Status
              port: 8111
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /home/shoko/.shoko
              name: config
            - mountPath: /data
              name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: shoko
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: shoko
        - name: data
          persistentVolumeClaim:
            claimName: media-data-nfs
        - configMap:
            name: shoko
          name: logtail
