generated/manifests/prod-axon/shoko/Service-shoko-internal.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/ips: 10.11.0.10
  labels:
    app.kubernetes.io/instance: shoko
    app.kubernetes.io/name: shoko
    app.kubernetes.io/service: shoko-internal
  name: shoko-internal
  namespace: media
spec:
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 8111
      protocol: TCP
      targetPort: 8111
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: shoko
    app.kubernetes.io/name: shoko
  type: LoadBalancer
