generated/manifests/prod-axon/shoko/Service-shoko.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: shoko
    app.kubernetes.io/name: shoko
    app.kubernetes.io/service: shoko
  name: shoko
  namespace: media
spec:
  ports:
    - name: http
      port: 8111
      protocol: TCP
      targetPort: 8111
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: shoko
    app.kubernetes.io/name: shoko
  type: ClusterIP
