generated/manifests/prod-axon/shoko/HTTPRoute-shoko.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shoko
  namespace: media
spec:
  hostnames:
    - shoko.json64.dev
  parentRefs:
    - name: default-gateway
      namespace: gateways
      sectionName: json64-dev-https
  rules:
    - backendRefs:
        - name: shoko
          port: 8111
