generated/manifests/prod-axon/shoko/CiliumNetworkPolicy-allow-gateway-ingress-shoko.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-ingress-shoko
  namespace: media
spec:
  description: Allow Envoy Gateway proxies to reach shoko.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: shoko
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gateways
      toPorts:
        - ports:
            - port: "8111"
              protocol: TCP
